# xlog2

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY.md  VERSIONING.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  appimage.yml  ci.yml  syncd.yml
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
android/app/fastlane/metadata/android/en-US/changelogs/: 2.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: README.txt
android/app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp  paddle_jni.cpp  xlog_jni.cpp
android/app/src/main/java/ro/scripca/xlog2/: AdifIo.kt  AudioScreen.kt  AudioService.kt  AudioStreamClient.kt  EntryScreen.kt  LogListScreen.kt  LogScreen.kt  LogViewModel.kt  MainActivity.kt  Navigation.kt  OpusDecoder.kt  PaddleKeyer.kt  PaddleScreen.kt  PaddleService.kt  PeersScreen.kt  QrzCache.kt  QrzClient.kt  Qso.kt  RigBands.kt  RigctldClient.kt  Settings.kt  SettingsScreen.kt  SyncScreen.kt  SyncService.kt  Theme.kt  UsbPaddle.kt  XlogApp.kt  XlogCore.kt  XlogRepository.kt
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml
android/docs/: play-store-publishing.md
android/fdroid/: README.md  ro.scripca.xlog2.yml
android/native/: CMakeLists.txt
android/native/smoke/: host_smoke.cpp
data/: coastline.txt
debian/: changelog  control  copyright  rules  xlog2-data.install  xlog2-gtk.install  xlog2-qt.install  xlog2-syncd.install
docs/: cw-skimmer-decoder.md  logbook-sync.md
packaging/: 99-xlog2-paddle.rules  build-appimage.sh  build-syncd-musl.sh  build-syncd-portable.sh  publish-ppa.sh  release.sh  xlog2-gtk.desktop  xlog2-paddle.desktop  xlog2-qt.desktop  xlog2-syncd-install.sh  xlog2-syncd.service
src/: Adif.cpp  BandMapItem.h  CwSkimmerPanel.cpp  CwSkimmerPanel.h  DxCluster.cpp  DxCluster.h  DxClusterPanel.cpp  DxClusterPanel.h  DxSpotItem.h  Dxcc.cpp  GlibDispatcher.h  LogBook.cpp  LogBook.h  LogPage.cpp  LogPage.h  Lotw.cpp  Lotw.h  MainWindow.cpp  MainWindow.h  MapPanel.cpp  MapPanel.h  Qrz.cpp  Qrz.h  Qso.h  QsoItem.h  Rig.cpp  Rig.h  RigPanel.cpp  RigPanel.h  SettingsDialog.cpp  SettingsDialog.h  SkimmerItem.h  Udp.cpp  Udp.h  UiUtil.h  XlogApplication.cpp  XlogApplication.h  main.cpp
src/core/: Version.h
src/core/domain/: Adif.cpp  Adif.h  Bands.cpp  Bands.h  DxSpot.h  Dxcc.cpp  Dxcc.h  LogBook.cpp  LogBook.h  Qso.h  Xlog.cpp  Xlog.h
src/core/logic/: CwExpander.cpp  CwExpander.h  DupeMessage.cpp  DupeMessage.h  DxccDeriver.cpp  DxccDeriver.h  Geo.cpp  Geo.h  QsoMapper.cpp  QsoMapper.h  Statistics.cpp  Statistics.h  StrUtil.h  TimeUtil.h  Uuid.cpp  Uuid.h
src/core/platform/: IUiDispatcher.h  ProcessRunner.cpp  ProcessRunner.h  Rtkit.cpp  Rtkit.h
src/core/presenter/: LogPagePresenter.cpp  LogPagePresenter.h  MainPresenter.cpp  MainPresenter.h  QrzPeer.cpp  QrzPeer.h  SyncCoordinator.cpp  SyncCoordinator.h
src/core/services/: Audio.cpp  Audio.h  CwKeyer.cpp  CwKeyer.h  CwSkimmer.cpp  CwSkimmer.h  DxCluster.cpp  DxCluster.h  HidPaddleInput.cpp  HidPaddleInput.h  LogbookSync.cpp  LogbookSync.h  Lotw.cpp  Lotw.h  Qrz.cpp  Qrz.h  QrzCache.cpp  QrzCache.h  QrzResult.h  RemoteKeyProtocol.h  RemotePaddleKeyer.cpp  RemotePaddleKeyer.h  Rig.cpp  Rig.h  SyncProtocol.cpp  SyncProtocol.h  Udp.cpp  Udp.h
src/core/settings/: IniFile.cpp  IniFile.h  Settings.cpp  Settings.h
src/core/view/: FormData.h  ILogPageView.h  IMainView.h
src/qt/: FlowLayout.cpp  FlowLayout.h  QsoTableModel.h  QtCwSkimmerPanel.cpp  QtCwSkimmerPanel.h  QtDispatcher.h  QtDxClusterPanel.cpp  QtDxClusterPanel.h  QtLogPage.cpp  QtLogPage.h  QtMainWindow.cpp  QtMainWindow.h  QtMapPanel.cpp  QtMapPanel.h  QtRigPanel.cpp  QtRigPanel.h  QtSettingsDialog.cpp  QtSettingsDialog.h  main.cpp
src/tools/: AudioPlay.cpp  PaddleKeyer.cpp  SyncDaemon.cpp
